:bug: Fixes whitespaces not showing in text shape

--- a/frontend/resources/styles/main/partials/texts.scss
+++ b/frontend/resources/styles/main/partials/texts.scss
@@ -1,4 +1,5 @@
 foreignObject .rich-text {
   color: $color-black;
   height: 100%;
+  white-space: pre-wrap;
 }
